--- a/notes-app-api/src/main/resources/application.properties
+++ b/notes-app-api/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url = ${DB_URL}
 spring.datasource.username = ${DB_USER}
 spring.datasource.password = ${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto= ${DLL_AUTO}
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
