--- a/idp/docker/docker-compose.yml
+++ b/idp/docker/docker-compose.yml
@@ -6,3 +6,8 @@ services:
     ports:
       - "6379:6379"
     command: redis-server --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - redis:/data
+volumes:
+  redis:
+    driver: local
