Add, Fix: add injection logic, fix project structure with controller, service, repository architecture

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,7 +1,7 @@
 startDb:
-	docker compose -f ./docker/docker-compose.yml up -d
+	docker compose -f ./config/docker/docker-compose.yml up -d
 
 stopDb:
-	docker compose -f ./docker/docker-compose.yml down
+	docker compose -f ./config/docker/docker-compose.yml down
 
 .PHONY: startDb stopDb
